--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
-  "name": "safe-app-idle-ts",
-  "version": "0.1.0",
+  "name": "gnosis-safe-app-starter",
+  "version": "0.0.1",
+  "description": "Gnosis Safe App Starter",
+  "author": "Kris Urbas @krzysu",
+  "license": "MIT",
   "private": true,
   "dependencies": {
+    "@gnosis.pm/safe-apps-sdk": "^0.3.1",
+    "@gnosis.pm/safe-react-components": "^0.2.0",
+    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -10,9 +16,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "bignumber.js": "^9.0.0",
+    "ethers": "^5.0.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "styled-components": "^5.1.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
