--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "@gnosis.pm/safe-apps-sdk": "^0.3.1",
     "@gnosis.pm/safe-react-components": "^0.2.0",
     "@material-ui/core": "^4.11.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^10.4.9",
+    "@testing-library/user-event": "^12.1.3",
+    "@types/jest": "^26.0.10",
+    "@types/node": "^14.6.2",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/styled-components": "^5.1.2",
     "bignumber.js": "^9.0.0",
     "ethers": "^5.0.9",
     "react": "^16.13.1",
@@ -23,7 +24,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "styled-components": "^5.1.1",
-    "typescript": "~3.7.2"
+    "typescript": "~4.0.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
