--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Kris Urbas @krzysu",
   "license": "MIT",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@gnosis.pm/safe-apps-sdk": "^0.3.1",
     "@gnosis.pm/safe-react-components": "^0.2.0",
