--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "safe-app-test",
+  "name": "safe-test-app",
   "version": "0.0.1",
   "description": "Gnosis Safe App for testing purposes",
   "author": "Gnosis",
@@ -7,23 +7,23 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@gnosis.pm/safe-apps-sdk": "https://github.com/gnosis/safe-apps-sdk.git#3f0689f",
+    "@gnosis.pm/safe-apps-sdk": "https://github.com/gnosis/safe-apps-sdk.git#8e89ef8",
     "@material-ui/core": "^4.11.0",
-    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.8",
+    "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
-    "@types/node": "^14.11.11",
+    "@types/node": "^14.14.3",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.0",
     "@types/styled-components": "^5.1.4",
     "bignumber.js": "^9.0.0",
-    "ethers": "^5.0.18",
+    "ethers": "^5.0.19",
     "evergreen-ui": "^5.1.2",
-    "react": "^16.14.0",
+    "react": "^17.0.1",
     "react-app-rewired": "^2.1.6",
-    "react-dom": "^16.14.0",
-    "react-scripts": "3.4.3",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.0",
     "styled-components": "^5.1.1",
     "typescript": "~4.0.2"
   },
