add example for getBlockByNumber("latest")

--- a/package.json
+++ b/package.json
@@ -7,25 +7,25 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@gnosis.pm/safe-apps-sdk": "1.0.0-beta.4",
-    "@material-ui/core": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.5.0",
-    "@types/jest": "^26.0.17",
-    "@types/node": "^14.14.9",
+    "@gnosis.pm/safe-apps-sdk": "file:.yalc/@gnosis.pm/safe-apps-sdk",
+    "@material-ui/core": "^4.11.3",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.2",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/styled-components": "^5.1.4",
+    "@types/styled-components": "^5.1.7",
     "bignumber.js": "^9.0.0",
-    "ethers": "^5.0.23",
+    "ethers": "^5.0.26",
     "evergreen-ui": "^5.1.2",
     "react": "^17.0.1",
-    "react-app-rewired": "^2.1.7",
+    "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "styled-components": "^5.1.1",
-    "typescript": "~4.1.2"
+    "typescript": "~4.1.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
