--- a/package.json
+++ b/package.json
@@ -7,25 +7,25 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@gnosis.pm/safe-apps-sdk": "file:.yalc/@gnosis.pm/safe-apps-sdk",
+    "@gnosis.pm/safe-apps-sdk": "2.2.0",
     "@material-ui/core": "^4.11.3",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.7.1",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.28",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
-    "@types/styled-components": "^5.1.7",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^13.1.1",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@types/styled-components": "^5.1.9",
     "bignumber.js": "^9.0.0",
-    "ethers": "^5.0.31",
+    "ethers": "^5.0.32",
     "evergreen-ui": "^5.1.2",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-app-rewired": "^2.1.8",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
     "styled-components": "^5.1.1",
-    "typescript": "~4.1.5"
+    "typescript": "~4.2.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
