--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@gnosis.pm/safe-apps-sdk": "file:.yalc/@gnosis.pm/safe-apps-sdk",
+    "@gnosis.pm/safe-apps-sdk": "https://gitpkg.now.sh/gnosis/safe-apps-sdk/packages/safe-apps-sdk?71fd1bef7ec36499c7179b406818324cb6e34ac6",
     "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
@@ -21,7 +21,6 @@
     "ethers": "^5.1.4",
     "evergreen-ui": "^6.0.1",
     "react": "^17.0.2",
-    "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "semver": "7.1.1",
@@ -29,9 +28,9 @@
     "typescript": "~4.2.4"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": "react-app"
