--- a/package.json
+++ b/package.json
@@ -7,25 +7,25 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@gnosis.pm/safe-apps-sdk": "https://gitpkg.now.sh/gnosis/safe-apps-sdk/packages/safe-apps-sdk?71fd1bef7ec36499c7179b406818324cb6e34ac6",
+    "@gnosis.pm/safe-apps-sdk": "4.3.0-next.2",
     "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.7",
+    "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.1.9",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^15.3.1",
-    "@types/react": "^17.0.6",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.9.0",
+    "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.5",
-    "@types/styled-components": "^5.1.9",
+    "@types/styled-components": "^5.1.14",
     "bignumber.js": "^9.0.0",
     "ethers": "^5.1.4",
     "evergreen-ui": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "semver": "7.1.1",
+    "semver": "7.3.5",
     "styled-components": "^5.3.0",
-    "typescript": "~4.2.4"
+    "typescript": "~4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
