--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@gnosis.pm/safe-apps-sdk": "4.3.0-next.2",
+    "@gnosis.pm/safe-apps-sdk": "6.1.0",
     "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^12.0.0",
