--- a/package.json
+++ b/package.json
@@ -7,25 +7,25 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@gnosis.pm/safe-apps-sdk": "https://gitpkg.now.sh/safe-global/safe-apps-sdk/packages/safe-apps-sdk?fix/eip712-signing",
+    "@gnosis.pm/safe-apps-sdk": "^7.8.0",
     "@material-ui/core": "^4.12.4",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.2.1",
-    "@types/jest": "^28.1.4",
-    "@types/node": "^18.0.3",
+    "@types/jest": "^29.0.3",
+    "@types/node": "^18.7.18",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.5",
     "@types/styled-components": "^5.1.25",
     "bignumber.js": "^9.0.2",
-    "ethers": "^5.6.9",
+    "ethers": "^5.7.1",
     "evergreen-ui": "6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "semver": "7.3.7",
     "styled-components": "^5.3.5",
-    "typescript": "~4.7.4"
+    "typescript": "~4.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
